--- a/css/style.css
+++ b/css/style.css
@@ -151,6 +151,9 @@ body {
     display: none;
 }
 
+.confirmation{
+    padding-bottom: 40px;
+}
 
 @media only screen and (max-width: 767px) {
     /* For mobile phones: */
